Feature: media screen para desktop

--- a/html/index.html
+++ b/html/index.html
@@ -33,7 +33,7 @@
         </nav>
 
         <main>
-            <section aria-labelledby="t-productos-destacados" class="section-container">
+            <section aria-labelledby="t-productos-destacados" class="section-container" id="destacados">
                 <h2 id="t-productos-destacados">Productos Destacados</h2>
 
                 <ul id="lista-productos">
@@ -53,7 +53,7 @@
                 </ul>
             </section>
 
-            <section aria-labelledby="t-emprendedores" class="section-container">
+            <section aria-labelledby="t-emprendedores" class="section-container" id="emprendedores">
                 <h2 id="t-emprendedores">Emprendedores</h2>
 
                 <ul id="lista-emprendedores">
@@ -72,7 +72,7 @@
                 </ul>
             </section>
 
-            <section aria-labelledby="t-canastas" class="section-container">
+            <section aria-labelledby="t-canastas" class="section-container" id="canastas">
                 <h2 id="t-canastas">Canastas</h2>
 
                 <ul id="lista-canastas">
