--- a/html/categoria.html
+++ b/html/categoria.html
@@ -7,6 +7,7 @@
     <title>Hecho en Nuevo León</title>
 
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/styles_catalogo.css">
 </head>
 
