--- a/html/index.html
+++ b/html/index.html
@@ -132,5 +132,6 @@
         </footer>
 
         <script src="../js/app.js"></script>
+        <script src="../js/data.js"></script>
     </body>
 </html>
